--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "twilio": "^4.19.0"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.4.11",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
